<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.didact.u3_ejerciciospinner1.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal"
        android:background="@drawable/trama"></LinearLayout>

    <TextView
        android:id="@+id/textView2"
        style="@style/textos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvtipo" />

    <Spinner
        android:id="@+id/sp_tipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_tipotest"
            android:onClick="clickTipoTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btntest" />

        <Button
            android:id="@+id/btn_respuesta"
            android:onClick="clickRespuesta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/btnrespuesta" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_pregunta"
        style="@style/textos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pregunta"
        android:textSize="@dimen/d20" />

    <RadioGroup
        android:id="@+id/rg_respuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_90"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resp90" />

        <RadioButton
            android:id="@+id/rb_120"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resp120" />

        <RadioButton
            android:id="@+id/rb_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/respno" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CheckBox
            android:id="@+id/cb_repetida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/cbrespuesta" />
    </RelativeLayout>
</LinearLayout>
